fixed overflow

--- a/src/app/components/input/input.component.scss
+++ b/src/app/components/input/input.component.scss
@@ -21,7 +21,7 @@
     font-size: var(--font-size-normal);
     outline: none;
     margin-bottom: 6px;
-    width: 100%;
+    display: flex;
 
     &:focus {
       border-bottom-color: lch(from var(--color-primary) l calc( c + 130) h);
